--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,8 +3,9 @@
 name: Update
 
 # Triggers the workflow pull request events
-on: schedule
-  - cron:  '*/15 * * * *'
+on: 
+  schedule:
+    - cron:  '*/15 * * * *'
 
 jobs:
   diff:
