--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,7 +8,7 @@ on:
     - cron:  '*/15 * * * *'
 
 jobs:
-  diff:
+  update:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
@@ -26,7 +26,7 @@ jobs:
         curl https://covidtracking.com/api/counties.csv -o data/counties.csv
     
     - name: Commit
-      uses: stefanzweifel/git-auto-commit-action@v4
+      uses: stefanzweifel/git-auto-commit-action@v4.1.2
       with:
         commit_message: Updating public spreadsheet CSV backups
         file_pattern: data/\*.csv
