--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,7 +4,7 @@ name: Update
 
 on: 
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '*/5 * * * *'
 
 jobs:
   update:
@@ -28,4 +28,4 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4.1.2
       with:
         commit_message: Updating public spreadsheet CSV backups
-        file_pattern: data/\*.csv
+        file_pattern: data/*.csv
