--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,4 +29,4 @@ jobs:
       with:
         commit_message: Updating public spreadsheet CSV backups
         file_pattern: data/*.csv
-        commit_author: GitHub Actions actions@github.com
+        commit_author: GitHub Actions <actions@github.com>
